# ros2-gui-node

./: .ci.yml  .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
.github/workflows/: docker.yml
environments/: Dockerfile  README.md  build-docker.sh  run-docker.sh  tvm-config.cmake
examples/kenning-instance-segmentation/: Dockerfile  README.md  build-docker.sh  kenning-instance-segmentation-cpu.json  kenning-instance-segmentation-cpu.py  kenning-instance-segmentation-cpu.yaml  kenning-instance-segmentation.json  kenning-instance-segmentation.py  kenning-instance-segmentation.yaml  kenning_yolact_gui_node.cpp  manifest.xml  run-docker.sh  tvm-config.cmake  yolact-tvm-cpu-optimization.json  yolact-tvm-cpu-optimization.yaml  yolact-tvm-gpu-optimization.json  yolact-tvm-gpu-optimization.yaml  yolact_gui_node.cpp
examples/kenning-multimodel-demo/: Dockerfile  README.md  build-docker.sh  init-demo.sh  kenning-depth-estimation.yaml  kenning-instance-segmentation.yaml  kenning-multimodel-demo.py  kenning-pose-estimation.yaml  kenning-pose-from-detection.yaml  kenning_multimodel_demo.cpp  manifest.xml  run-docker.sh
examples/kenning-multimodel-demo/jetson/: README.md
examples/kenning-multimodel-demo/tools/: README.md
examples/kenning-multimodel-demo/tools/general/: README.md  init-demo.sh  run-demo.sh
examples/kenning-multimodel-demo/tools/ubuntu/: README.md  install.sh  kenning.multimodel.demo.service.template
include/gui_node/: gui_engine.hpp  gui_node.hpp
include/gui_node/ros_data/: ros_client_data.hpp  ros_publisher_data.hpp  ros_server_data.hpp  ros_subscriber_data.hpp
include/gui_node/utils/: detection.hpp  pose.hpp  utils.hpp
include/gui_node/widget/: widget.hpp  widget_control.hpp  widget_counter.hpp  widget_depth.hpp  widget_detection.hpp  widget_pose.hpp  widget_rosout.hpp  widget_string.hpp  widget_video.hpp
launch/: sample_launch.py
src/: gui_engine.cpp  gui_node.cpp
src/samples/: publisher_node.cpp  rosout_subscriber_node.cpp  sample_gui_node.cpp  sample_publisher_node.cpp  string_publisher_node.cpp  string_subscriber_node.cpp  subscriber_node.cpp  video_publisher_node.cpp  video_subscriber_node.cpp  yolact_gui_node.cpp
src/widget/: widget_control.cpp  widget_counter.cpp  widget_depth.cpp  widget_detection.cpp  widget_pose.cpp  widget_rosout.cpp  widget_string.cpp  widget_video.cpp
